# thesis-code

./: .gitignore  README.md  __init__.py  bibliography.bib  experiment_kinematic_model.py  experiment_kinematic_model_pose_control.py  experiment_speed_controller.py  experiment_straight_then_reverse.py  experiment_wheel_controllers.py  liveplot.py  liveplots.py  main.py  main.tex  params.py  pb_helloworld.py  preamble.tex  simulator.py  utils.py
bags/: metadata.yaml
code/: dynamicmodelinterface.py  dynamicmodels.py  fmubuilder.py  fmuinterface.py  liveplot.py  liveplots.py  main.py  main2.py  models.py  simulate.py  simulator.py  transform.py  vehicle.py  wheel.py
code/modelica/: AutoagriModel.mo  Body.mo  Linear2DMovement.mo  SplitTest.mo  TwoTrackVehicle.fmu  TwoTrackVehicle.mo  Vehicle.makefile  Vehicle.mo  VehicleForceModel.mo  Vehicle_12jac.h  Vehicle_13opt.h  Vehicle_16dae.h  Vehicle_functions.h  Vehicle_info.json  Vehicle_init.xml  Vehicle_model.h  Wheel.mo  WheelOld.mo  fmu-builder.py  ompy.py  simulate.py  two_track_vehicle.py
code/models/: autoagri.py  vehicle.py  wheel.py
code/notebook/: modelling.ipynb  sympy-experiment.ipynb
code/test/: double_pendulum_animation.py  transform.py  velocity_wheel_animation.py
data/: kinematic_test_long.mat  straight_then_reverse.mat
draft/: angular-momentum.tex  automotive-control-systems.tex  grip-phd.tex  on-developing-all-wheel-drive-model.tex  wheel-dynamics.tex
experiments/controllers/: double_pendulum.py  dynamical_system.py  ilqr.py  inverted_pendulum.py  lqr.py  test.py
experiments/log/: latest_list
experiments/lqr_on_kinematic_model/: solver.py  solver_smaller.py
experiments/nmpc_tests/: main.py
figs/raw/: chattering_signal.fig  chattering_smc_vs_rr.fig  chattering_smc_vs_rr_zoomed.fig  circular_smoothing.fig  course.fig  fermat_line.fig  fermat_smoothing_1.fig  fermat_smoothing_2.fig  fermat_smoothing_curvature.fig  fermat_smoothing_curvatures.fig  fermat_vs_circle.fig  (+7 more)
log/: latest_list
models/: autoagri.py  body.py  vehicle.py  vehicle.urdf  vehicle.urdf.xacro  wheel.py
odesim/: collision_basics.py  ode_simulator.py  simulator.py
old/: README.md  bezier.py  blitmanager.py  experiment_kinematic_model.py  experiment_wheel_controllers.py  liveplot.py  main.py
report/: load_transfer.py  wheel_steer_tf.py
ros_ws/src/tutorial/: CMakeLists.txt  package.xml
ros_ws/src/tutorial/src/: publisher.cpp  subscriber.cpp
sections/: dynamics.tex  rigid-body-kinematics.tex  rotations.tex
simulator/: __init__.py  box.py  common.py  cylinder.py  pid.py  plane.py  program.py  renderer.py  rotations.py  shader.py  test.py  vehiclesim.py  wheel.py  window.py
ws/: ros.code-workspace  smoothed.csv  start.sh
ws/src/control/: CMakeLists.txt  package.xml
ws/src/control/include/control/: PID.hpp  clip.hpp  cross2d.hpp  halley.hpp  iterative_lqr.hpp  reference_model.hpp  softsign.hpp  ssa.hpp
ws/src/control/include/control/dynamics/: dynamical_system.hpp  first_order.hpp  inverted_pendulum.hpp  no_slip_4wis.hpp  singletrack_kinematic.hpp
ws/src/control/include/control/path/: path.hpp  path_circle.hpp  path_collection.hpp  path_line.hpp  path_spiral.hpp
ws/src/control/launch/: controllers.launch.py  controllers_better_reference.launch.py  controllers_circular.launch.py  controllers_curvature_ff.launch.py  controllers_curvature_ff_more.launch.py  controllers_curvature_ff_more_highspeed.launch.py  controllers_curvature_ff_slow.launch.py  controllers_lowcurvature.launch.py  controllers_lowcurvature_highspeed.launch.py  controllers_lowcurvature_highspeed_circular.launch.py  controllers_lowcurvature_highspeed_faster.launch.py  controllers_lowspeed.launch.py  controllers_manual.launch.py  controllers_no_braking.launch.py  controllers_no_reference.launch.py  controllers_yaw.launch.py  controllers_yawrate.launch.py  report_sliding_mode.launch.py  report_wheel_controllers.launch.py  report_wheel_controllers_rr.launch.py  report_wheel_controllers_smc.launch.py  wheel_controllers.launch.py
ws/src/control/src/: PID.cpp  clip.cpp  controllib_testing.cpp  cross2d.cpp  guidance_node.cpp  halley.cpp  iterative_lqr.cpp  pathlib_testing.cpp  reference_model.cpp  softsign.cpp  ssa.cpp  vehicle_controller_node.cpp  wheel_controller_node.cpp
ws/src/control/src/dynamics/: dynamical_system.cpp  first_order.cpp  inverted_pendulum.cpp  no_slip_4wis.cpp  singletrack_kinematic.cpp
ws/src/control/src/path/: path.cpp  path_circle.cpp  path_collection.cpp  path_line.cpp  path_spiral.cpp
ws/src/operation/: CMakeLists.txt  package.xml
ws/src/operation/launch/: manual.launch.py  report_waypoints_simple_lap.launch.py  report_waypoints_single_turn.launch.py  report_waypoints_straight.launch.py  report_waypoints_survey.launch.py  report_wheel_angvel_smooth_step.launch.py  report_wheel_angvel_step.launch.py  report_wheel_step.launch.py  report_wheel_turn.launch.py  report_yaw_step.launch.py  report_yawrate_step.launch.py  waypoints.launch.py
ws/src/operation/src/: manual_operation_joy.cpp  waypoint_publisher.cpp  wheel_angvel_smooth_stepper.cpp  wheel_angvel_stepper.cpp  wheel_stepper.cpp  wheel_turner.cpp  yaw_stepper.cpp  yawrate_stepper.cpp
ws/src/simulator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws/src/simulator/include/simulator/gazebo_plugins/: simple_car.hpp  vehicle_body.hpp  wheel.hpp
ws/src/simulator/launch/: simulator.launch.py
ws/src/simulator/models/autoagri/: model.config  model.urdf  vehicle.sdf
ws/src/simulator/models/simple_car/: model.config  model.sdf  model.urdf  model.urdf.xacro  test.urdf
ws/src/simulator/models/simple_car/resources/tire/: 13484_Off-Road_Tire_v1_L2.mtl
ws/src/simulator/models/simple_car/resources/tool/: tool.blend  tool.blend1  tool.dae
ws/src/simulator/msg/: FloatArray.msg  WheelCommand.msg  WheelState.msg
ws/src/simulator/simulator/: spawn_vehicle.py  spawn_vehicle_offcenter.py
ws/src/simulator/src/: wheel_controller_node.cpp
ws/src/simulator/src/gazebo_plugins/: simple_car.cpp  vehicle_body.cpp  wheel.cpp
ws/src/simulator/worlds/: flat.world  slanted.world
(+444 files in other folders)
