<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorial</name>
  <version>0.0.0</version>
  <description>Examples of minimal publisher/subscriber.</description>
  <maintainer email="rendellc@stud.ntnu.no">cale</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_tools</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>

  <buildtool_export_depend>python3-catkin-pkg-modules</buildtool_export_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
